# cmake-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  config.h.in
driver/: CMakeLists.txt
executable/: CMakeLists.txt  config_executable.h.in
executable/include/: platform.h
executable/src/: main.cpp
executable/test/: CMakeLists.txt  main_test.cpp
